Disable groovy scripting (CVE-2015-1427)

--- a/assemblies/nexus-base-template/src/main/resources/overlay/etc/elasticsearch.yml
+++ b/assemblies/nexus-base-template/src/main/resources/overlay/etc/elasticsearch.yml
@@ -4,6 +4,7 @@ http.enabled: false
 node.local: true
 discovery.zen.ping.multicast.enabled: false
 path.data: ${nexus-work}/elasticsearch
+script.groovy.sandbox.enabled: false
 
 ##################### Elasticsearch Configuration Example #####################
 
